adicionando autorização nos testes
